--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -11,3 +11,6 @@ eureka:
     fetch-registry: true                # 是否从 Eureka Server 抓取已有的注册信息。单节点无所谓，集群必须设置为 true 才能配合 ribbon 使用负载均衡
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
