--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -17,6 +17,11 @@ eureka:
     fetch-registry: true                # 是否从 Eureka Server 抓取已有的注册信息。单节点无所谓，集群必须设置为 true 才能配合 ribbon 使用负载均衡
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+    lease-renewal-interval-in-seconds: 5      # 微服务向 Eureka 发送心跳信息的时间间隔，单位为秒（默认是30秒）
+    lease-expiration-duration-in-seconds: 10   # Eureka 在收到最后一次心跳后等待的时间上限，超时将提出服务，单位为秒（默认是90秒）
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
