--- a/cloud-consumer-order80-zk/src/main/resources/application.yml
+++ b/cloud-consumer-order80-zk/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
     name: cloud-order-service
   cloud:
     zookeeper:
-      connect-string: 192.168.80.129:2181       # zookeeper 主机 & 端口号
+      connect-string: 192.168.80.129:2181       # zookeeper 注册中心
