--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <modules>
         <module>cloud-consumer-order80</module>
-        <module>cloud-api-commons</module>
+        <module>cloud-commons</module>
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
         <module>cloud-provider-payment8001</module>
@@ -20,6 +20,9 @@
         <module>cloud-consumer-order80-zk</module>
         <module>cloud-provider-payment8006-consul</module>
         <module>cloud-consumer-order80-consul</module>
+        <module>cloud-consumer-order80-feign</module>
+        <module>cloud-api</module>
+        <module>cloud-provider-payment8008-hystrix</module>
     </modules>
 
     <!-- 统一管理jar包版本 -->
